my-site/public/styles/unit.css
/* ... */
.glyphicon-object-align-horizontal:before {
	content: "\e246";
}

.glyphicon-object-align-left:before {
	content: "\e247";
}

.glyphicon-object-align-vertical:before {
	content: "\e248";
}

.glyphicon-object-align-right:before {
	content: "\e249";
}

.glyphicon-triangle-right:before {
	content: "\e250";
}

.glyphicon-triangle-left:before {
	content: "\e251";
}

.glyphicon-triangle-bottom:before {
	content: "\e252";
}

.glyphicon-triangle-top:before {
	content: "\e253";
}

.glyphicon-console:before {
	content: "\e254";
}

.glyphicon-superscript:before {
	content: "\e255";
}

.glyphicon-subscript:before {
	content: "\e256";
}

.glyphicon-menu-left:before {
	content: "\e257";
}

.glyphicon-menu-right:before {
	content: "\e258";
}

.glyphicon-menu-down:before {
	content: "\e259";
}

.glyphicon-menu-up:before {
	content: "\e260";
}

.breadcrumb>li.inactive {
	display: none;
}

